# MipsPP

./: MipsPP.cabal  README.md  default.nix  release.nix  shell.nix  test.s
main/: Main.hs
src/Control/: PPrint.hs
src/Data/: Instruction.hs  MipsProg.hs  Register.hs
src/Data/Instruction/: IType.hs  JType.hs  MType.hs  RType.hs
src/Parser/: Utils.hs
